JWT Bearer Token Service implementation

--- a/RapidPayITL/appsettings.json
+++ b/RapidPayITL/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token":  "gb3u7 jkhsdkjhd khshskjh skjhdskjh 6#462G=)<"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
